<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_feed">

    <fragment
        android:id="@+id/navigation_feed"
        android:name="com.example.miwtter.ui.feed.FeedFragment"
        android:label="@string/title_home"
        tools:layout="@layout/feed_fragment">

    </fragment>

    <fragment
        android:id="@+id/navigation_create_post"
        android:name="com.example.miwtter.ui.feed.CreatePostFragment"
        android:label="@string/title_post"
        tools:layout="@layout/create_post_fragment" >
        <action
        android:id="@+id/action_create_to_feed"
        app:destination="@id/navigation_feed" />
    </fragment>
    <fragment
        android:id="@+id/navigation_fav"
        android:name="com.example.miwtter.ui.fav.FavFragment"
        android:label="@string/title_fav"
        tools:layout="@layout/fav_fragment" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.miwtter.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/profile_fragment" />


</navigation>